--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ spring.data.redis.host=localhost
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/futbolvintage
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 # spring.datasource.driverClassName=com.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
