--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,9 @@ spring.session.redis.namespace=spring:session
 spring.data.redis.port=6379
 spring.data.redis.host=localhost
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/futbolvintage
+spring.datasource.url=jdbc:mysql://localhost:3306/futbolvintage
 spring.datasource.username=root
 spring.datasource.password=
 # spring.datasource.driverClassName=com.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
+spring.data.jpa.repositories.enabled=true
